<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_group_layout"
    android:background="@color/beige"
    tools:context=".Activity.CreateGroupActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/groupNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.781"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectPhoto">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/groupName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Group Name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/groupDescLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.781"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/groupNameLayout">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/groupDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Group Description"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addMemberLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toStartOf="@+id/addGroupMember"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/groupDescLayout">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newMemberEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Add Member Email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addGroupMember"
                android:layout_width="100dp"
                android:layout_height="68dp"
                android:layout_marginEnd="14dp"
                android:backgroundTint="@color/primary"
                android:text="Add"
                android:textColor="@color/beige"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/addMemberLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/addMemberLayout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createGroupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/primary"
                android:paddingHorizontal="20dp"
                android:text="Create Group"
                android:background="@drawable/rounded_button"
                android:textColor="@color/beige"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/memberListView" />


            <Button
                android:id="@+id/selectPhoto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/rounded_select_photo"
                android:text="@string/select_photo"
                app:layout_constraintBottom_toBottomOf="@+id/selectPhotoView"
                app:layout_constraintEnd_toEndOf="@+id/selectPhotoView"
                app:layout_constraintStart_toStartOf="@+id/selectPhotoView"
                app:layout_constraintTop_toTopOf="@+id/selectPhotoView" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/selectPhotoView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/memberListView"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@+id/addMemberLayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>